--- a/.versionrc.json
+++ b/.versionrc.json
@@ -6,15 +6,16 @@
     {"type": "refactor", "section": "♻️ Code Refactoring"},
     {"type": "docs", "section": "📚 Documentation"},
     {"type": "test", "section": "✅ Tests"},
-    {"type": "build", "section": "🏗️ Build System", "hidden": true},
-    {"type": "ci", "section": "👷 CI/CD", "hidden": true},
     {"type": "chore", "section": "🔧 Maintenance", "hidden": true},
+    {"type": "ci", "section": "👷 CI/CD", "hidden": true},
     {"type": "style", "section": "💄 Code Style", "hidden": true},
-    {"type": "revert", "section": "⏪ Reverts"}
+    {"type": "build", "section": "🏗️ Build System", "hidden": true}
   ],
-  "commitUrlFormat": "https://github.com/nacorga/datataki-client/commit/{{hash}}",
-  "compareUrlFormat": "https://github.com/nacorga/datataki-client/compare/{{previousTag}}...{{currentTag}}",
-  "issueUrlFormat": "https://github.com/nacorga/datataki-client/issues/{{id}}",
-  "releaseCommitMessageFormat": "chore(release): {{currentTag}} [skip ci]",
+  "skip": {
+    "bump": false,
+    "changelog": false,
+    "commit": false,
+    "tag": false
+  },
   "header": "# 📦 Changelog\n\nAll notable changes to this project will be documented in this file.\n\nThe format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),\nand this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html)."
 }
